questions now show up, but can't answer, error